[package]
name = "xmcs"
version = "0.1.0"
authors = ["Jean-Baptiste Daval <j-b.daval@crans.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[features]

default = []

# Allows to output a graph in the format used by the graphviz tools
graphviz = ["priority-queue"]

[dependencies]
priority-queue = { version = "1.1.0", optional = true }

[[example]]
name = "graphviz"
required-features = ["graphviz"]
